--- a/mysite/main/templates/main/account.html
+++ b/mysite/main/templates/main/account.html
@@ -16,8 +16,9 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         {% if user.is_authenticated %}
-        <li><a href="/account">{{user.username}}</a></li>
+        <li><a href="/account"></a>Change Password</li>
         <li><a href="/logout">Logout</a></li>
+        <li><a href="/get_user_profile">{{user.username}}</a></li>
         {% else %}
         <li><a href="/register">Register</a></li>
         <li><a href="/login">Login</a></li>
@@ -40,8 +41,9 @@
             {% endif %}
         {% endfor %}
     {% endif %}
- 
+ <br><br>  
 
+<br><br>
 
 <div class="container">
 	<br>
