--- a/mysite/main/templates/main/home.html
+++ b/mysite/main/templates/main/home.html
@@ -2,15 +2,13 @@
 
 {% block content %}
   <div class="row">
-    {% for tut in tutorials %}
         <div class="col s12 m6">
           <div class="card blue-grey darken-1 hoverable">
             <div class="card-content white-text">
-              <span class="card-title">{{tut.name}}</span>
-              <p style="font-size:70%">Published {{tut.Date}}</p>
-              <p>{{tut.description|safe}}</p>
+              <span class="card-title">WELCOME TO SPLITWISE</span>
+              <p style="font-size:70%">Spend Wisely</p>
+              <p>Register or Login to continue</p>
             </div>
           </div>
         </div>
-    {% endfor %}
 {% endblock %}
