Added grouptables in models.py and groups.html file

--- a/mysite/main/templates/main/trans.html
+++ b/mysite/main/templates/main/trans.html
@@ -36,6 +36,7 @@
         {% endif %}
       <li class="nav-item"><a class="nav-link" href="/userpage">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="/friendspage">Friends</a></li>
+          <li><a href="/groupslistpage">Groups</a></li>
         <li class="nav-item"><a class="nav-link" href="/get_user_profile">{{user.first_name}}</a></li>
        <li class="nav-item"><a class="nav-link" href="/flist">Activity</a></li>
         <li class="nav-item"><a class="nav-link" href="/account">Change Password</a></li>
