--- a/mysite/main/templates/main/FTlist.html
+++ b/mysite/main/templates/main/FTlist.html
@@ -19,6 +19,7 @@
         {% if user.is_authenticated %}
           <li><a href="/userpage">Home</a></li>
           <li><a href="/friendspage">Friends</a></li>
+          <li><a href="/groupslistpage">Groups</a></li>
         {% if user.image %}
         <li><img src="{{ user.image.url }}" alt="Avatar" class="avatar" style="width: 50px;
   height: 50px;
