--- a/mysite/main/templates/main/insight.html
+++ b/mysite/main/templates/main/insight.html
@@ -1,5 +1,59 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<style type="text/css">
+		.highcharts-figure .chart-container {
+	width: 300px;
+	height: 200px;
+	float: left;
+}
+
+@media (max-width: 600px) {
+	.highcharts-figure {
+		width: 100%;
+	}
+	.highcharts-figure .chart-container {
+		width: 300px;
+		float: none;
+		margin: 0 auto;
+	}
+
+}
+
+.highcharts-figure, .highcharts-data-table table {
+	width: 600px;
+	margin: 0 auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #EBEBEB;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+.highcharts-data-table th {
+	font-weight: 600;
+    padding: 0.5em;
+}
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
+	</style>
+</head>
 <body>
 
 <div id="container"></div>
@@ -10,7 +64,18 @@
 <br><br>
 <div id="container2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <br><br>
+<div align="center" style="width: max-width; padding-left: 400px">
+<figure class="highcharts-figure">
+    <div id="container-speed" class="chart-container"></div>
+</figure>
+</div>
 
+<br><br>
+<div id="table" style="padding-top: 200px ; padding-left: 700px">
+	{% block content%}
+		{{loaded_data | safe}}
+	{% endblock %}
+</div>
 <p>Click the button to print the current page.</p>
 
 <button onclick="myFunction()">Get Your Stats</button>
@@ -19,6 +84,11 @@
 <script src="https://code.highcharts.com/modules/data.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+
 
 <script>
 function myFunction() {
@@ -28,6 +98,99 @@ function myFunction() {
    Highcharts.chart('container1', {{ chart1|safe }});
     Highcharts.chart('container2', {{ chart2|safe }});
     Highcharts.chart('container3', {{ chart3|safe }});
+    //Highcharts.chart('container-speed', {{ chart4|safe }});
+var gaugeOptions = {
+    chart: {
+        type: 'solidgauge'
+    },
+
+    title: null,
+
+    pane: {
+        center: ['50%', '85%'],
+        size: '140%',
+        startAngle: -90,
+        endAngle: 90,
+        background: {
+            backgroundColor:
+                Highcharts.defaultOptions.legend.backgroundColor || '#EEE',
+            innerRadius: '60%',
+            outerRadius: '100%',
+            shape: 'arc'
+        }
+    },
+
+    exporting: {
+        enabled: true
+    },
+
+    tooltip: {
+        enabled: true
+    },
+
+    // the value axis
+    yAxis: {
+        stops: [
+            [0.1, '#55BF3B'], // green
+            [0.5, '#DDDF0D'], // yellow
+            [0.9, '#DF5353'] // red
+        ],
+        lineWidth: 0,
+        tickWidth: 0,
+        minorTickInterval: null,
+        tickAmount: 2,
+        title: {
+            y: -70
+        },
+        labels: {
+            y: 16
+        }
+    },
+
+    plotOptions: {
+        solidgauge: {
+            dataLabels: {
+                y: 5,
+                borderWidth: 0,
+                useHTML: true
+            }
+        }
+    }
+};
+
+// The speed gauge
+var chartSpeed = Highcharts.chart('container-speed', Highcharts.merge(gaugeOptions, {
+    yAxis: {
+        min: 0,
+        max: 100,
+        title: {
+            text: 'Percentage of total Money in Debts'
+        }
+    },
+
+    credits: {
+        enabled: false
+    },
+
+    series: [{
+        name: 'Percentage of total Money in Debts',
+        data: [{{ chart4 }}],
+        dataLabels: {
+            format:
+                '<div style="text-align:center">' +
+                '<span style="font-size:25px">{y}</span><br/>' +
+                '<span style="font-size:12px;opacity:0.4">%</span>' +
+                '</div>'
+        },
+        tooltip: {
+            valueSuffix: ' %'
+        }
+    }]
+
+}));
+
+
+
 </script>
 
 </body>
