--- a/mysite/main/templates/main/groups.html
+++ b/mysite/main/templates/main/groups.html
@@ -70,7 +70,7 @@
         <div class="col s12 m6">
           <div class="card blue-grey darken-1 hoverable" style="position: relative;">
             <div class="card-content white-text">
-                {% if current_user.username == groups.username %}
+                {% if groups.tag == "group_creation" %}
                 <a href="{% url 'main:grouppage' group_name=groups.gpname %}">
                     <span class="card-title" style="position:absolute; top:2px; right:2px;">{{groups.gpname}}</span>
                 </a>
