--- a/mysite/main/templates/main/group_trans.html
+++ b/mysite/main/templates/main/group_trans.html
@@ -100,7 +100,7 @@ label:active:after {
       {% csrf_token %}
       <h3 class="text-center"></h3>
       <div class="form-group">
-        <input class="form-control item" type="text" name="name" id="activity" placeholder="What did You fucking spend on?" required>
+        <input class="form-control item" type="text" name="name" id="activity" placeholder="What did You spend on?" required>
       </div>
       <div class="form-group">
         <input class="form-control item" type="Number" name="money" minlength="9" id="password" placeholder="Money Spent in Rupees" pattern="^[0-9]*$" required>
